Fix mobile version having extra space on right side

--- a/src/styles/award.css
+++ b/src/styles/award.css
@@ -8,8 +8,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 215px;
-  width: 215px;
+  height: 216px;
+  width: 216px;
   background-color: #f3ebff;
   padding: 20px;
   margin: 10px;
@@ -32,5 +32,22 @@
 @media screen and (max-width: 1080px) {
   .award-grid-container {
     grid-template-columns: repeat(auto-fit, minmax(540px, 1fr));
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .award-grid-container {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .award-grid-container {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+  .award-grid-item {
+    height: 200px;
+    width: 200px;
+    font-size: 14px;
   }
 }
